[gd_scene load_steps=39 format=2]

[ext_resource path="res://src/main/ui/overworld-ui.gd" type="Script" id=1]
[ext_resource path="res://src/main/world/overworld-buttons.gd" type="Script" id=2]
[ext_resource path="res://src/main/ui/ImageButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/main/ui/ButtonShortcutHelper.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/ui/menu/theme/h4.theme" type="Theme" id=5]
[ext_resource path="res://assets/main/ui/touch/interact.png" type="Texture" id=6]
[ext_resource path="res://assets/main/ui/touch/menu.png" type="Texture" id=7]
[ext_resource path="res://assets/main/ui/touch/menu-pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/main/ui/touch/interact-pressed.png" type="Texture" id=9]
[ext_resource path="res://src/main/world/phone-menu.gd" type="Script" id=10]
[ext_resource path="res://src/main/world/OverworldTouchButtons.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/main/ui/settings/SettingsMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/main/ui/SceneTransitionCover.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/main/ui/VersionLabel.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/main/ui/MoneyLabel.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/main/ui/chat/ChatUi.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/main/ui/MusicPopup.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/main/ui/level-select/LevelSelectPanel.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/main/ui/FpsLabel.tscn" type="PackedScene" id=19]
[ext_resource path="res://src/main/ui/CheatCodeDetector.tscn" type="PackedScene" id=20]
[ext_resource path="res://assets/main/ui/touch/phone-pressed.png" type="Texture" id=21]
[ext_resource path="res://assets/main/ui/touch/close-pressed.png" type="Texture" id=22]
[ext_resource path="res://assets/main/ui/touch/phone.png" type="Texture" id=23]
[ext_resource path="res://assets/main/ui/touch/close.png" type="Texture" id=24]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="InputEventAction" id=6]
action = "phone"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="InputEventAction" id=15]
action = "ui_cancel"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 15 )

[sub_resource type="InputEventAction" id=10]
action = "interact"

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.1, 0.094, 0.094, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="InputEventAction" id=13]
action = "ui_cancel"

[sub_resource type="ShortCut" id=14]
shortcut = SubResource( 13 )

[node name="FreeRoamUi" type="CanvasLayer" groups=["overworld_ui"]]
script = ExtResource( 1 )

[node name="Labels" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SoutheastLabels" type="VBoxContainer" parent="Labels"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -502.0
margin_top = -290.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 2
theme = ExtResource( 5 )
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FpsLabel" parent="Labels/SoutheastLabels" instance=ExtResource( 19 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 236.0
margin_right = 492.0
margin_bottom = 256.0

[node name="VersionLabel" parent="Labels/SoutheastLabels" instance=ExtResource( 14 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 260.0
margin_right = 492.0
margin_bottom = 280.0

[node name="NorthwestLabels" type="VBoxContainer" parent="Labels"]
margin_left = 10.0
margin_top = 10.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" parent="Labels/NorthwestLabels" instance=ExtResource( 15 )]
margin_right = 502.0
compact = true

[node name="ChatUi" parent="." instance=ExtResource( 16 )]
visible = false

[node name="TouchButtons" parent="." instance=ExtResource( 11 )]

[node name="Buttons" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0.627451 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="Northeast" type="HBoxContainer" parent="Buttons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -512.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
custom_constants/separation = 10
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhoneButton" parent="Buttons/Northeast" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 292.0
margin_right = 392.0
margin_bottom = 100.0
focus_mode = 0
size_flags_horizontal = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
shortcut = SubResource( 7 )
icon = ExtResource( 23 )
expand_icon = true
normal_icon = ExtResource( 23 )
pressed_icon = ExtResource( 21 )

[node name="SettingsButton" parent="Buttons/Northeast" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 402.0
margin_right = 502.0
margin_bottom = 100.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
shortcut = SubResource( 9 )
icon = ExtResource( 7 )
expand_icon = true
normal_icon = ExtResource( 7 )
pressed_icon = ExtResource( 8 )

[node name="Southeast" type="HBoxContainer" parent="Buttons"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -160.0
margin_right = -10.0
margin_bottom = -60.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
custom_constants/separation = 10
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TalkButton" parent="Buttons/Southeast" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 402.0
margin_right = 502.0
margin_bottom = 100.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
shortcut = SubResource( 11 )
icon = ExtResource( 6 )
expand_icon = true
normal_icon = ExtResource( 6 )
pressed_icon = ExtResource( 9 )

[node name="CheatCodeDetector" parent="." instance=ExtResource( 20 )]
codes = [ "bigfps" ]

[node name="SettingsMenu" parent="." instance=ExtResource( 12 )]
quit_type = 1

[node name="CellPhoneMenu" type="CanvasLayer" parent="."]
script = ExtResource( 10 )

[node name="Bg" type="ColorRect" parent="CellPhoneMenu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.752941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelect" parent="CellPhoneMenu" instance=ExtResource( 18 )]
visible = false
custom_styles/panel = SubResource( 12 )

[node name="Buttons" type="Control" parent="CellPhoneMenu"]
visible = false
modulate = Color( 1, 1, 1, 0.627451 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Northeast" type="HBoxContainer" parent="CellPhoneMenu/Buttons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -512.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
custom_constants/separation = 10
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="CellPhoneMenu/Buttons/Northeast" instance=ExtResource( 3 )]
margin_left = 292.0
margin_right = 392.0
margin_bottom = 100.0
size_flags_horizontal = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
shortcut = SubResource( 14 )
icon = ExtResource( 24 )
expand_icon = true
normal_icon = ExtResource( 24 )
pressed_icon = ExtResource( 22 )

[node name="ShortcutHelper" parent="CellPhoneMenu/Buttons/Northeast/BackButton" instance=ExtResource( 4 )]
action = "phone"

[node name="Spacer" type="Control" parent="CellPhoneMenu/Buttons/Northeast"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 402.0
margin_right = 502.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2

[node name="MusicPopup" parent="." instance=ExtResource( 17 )]

[node name="SceneTransitionCover" parent="." instance=ExtResource( 13 )]

[connection signal="pressed" from="Buttons/Northeast/PhoneButton" to="." method="_on_CellPhoneButton_pressed"]
[connection signal="pressed" from="Buttons/Northeast/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Buttons/Southeast/TalkButton" to="." method="_on_TalkButton_pressed"]
[connection signal="hide" from="CellPhoneMenu" to="." method="_on_CellPhoneMenu_hide"]
[connection signal="hide" from="CellPhoneMenu" to="Buttons" method="_on_Menu_hide"]
[connection signal="hide" from="CellPhoneMenu" to="TouchButtons" method="_on_Menu_hide"]
[connection signal="show" from="CellPhoneMenu" to="." method="_on_CellPhoneMenu_show"]
[connection signal="show" from="CellPhoneMenu" to="Buttons" method="_on_Menu_show"]
[connection signal="show" from="CellPhoneMenu" to="TouchButtons" method="_on_Menu_show"]
[connection signal="pressed" from="CellPhoneMenu/Buttons/Northeast/BackButton" to="CellPhoneMenu" method="_on_BackButton_pressed"]
[connection signal="chat_choice_chosen" from="ChatUi" to="." method="_on_ChatUi_chat_choice_chosen"]
[connection signal="chat_event_played" from="ChatUi" to="." method="_on_ChatUi_chat_event_played"]
[connection signal="chat_finished" from="ChatUi" to="." method="_on_ChatUi_chat_finished"]
[connection signal="showed_choices" from="ChatUi" to="." method="_on_ChatUi_showed_choices"]
[connection signal="cheat_detected" from="CheatCodeDetector" to="Labels/SoutheastLabels/FpsLabel" method="_on_CheatCodeDetector_cheat_detected"]
[connection signal="hide" from="SettingsMenu" to="." method="_on_SettingsMenu_hide"]
[connection signal="hide" from="SettingsMenu" to="Buttons" method="_on_Menu_hide"]
[connection signal="hide" from="SettingsMenu" to="TouchButtons" method="_on_Menu_hide"]
[connection signal="quit_pressed" from="SettingsMenu" to="." method="_on_SettingsMenu_quit_pressed"]
[connection signal="show" from="SettingsMenu" to="." method="_on_SettingsMenu_show"]
[connection signal="show" from="SettingsMenu" to="Buttons" method="_on_Menu_show"]
[connection signal="show" from="SettingsMenu" to="TouchButtons" method="_on_Menu_show"]
